# radar_pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aux_scripts/: compare_model_vs_mc.py  compare_pd_model_vs_mc.py  run_tradeoff_demos.sh  sanitize_case_outputs.sh  sweep_integration_vs_far.py  validate.sh
cli/: __init__.py  make_case_report.py  make_report.py  run_case.py  run_sweep.py  utils.py
configs/cases/: demo_antenna_vs_coverage_high_gain.yaml  demo_antenna_vs_coverage_low_gain.yaml  demo_clutter_cfar.yaml  demo_clutter_cfar_hetero.yaml  demo_detector_vs_environment_ca.yaml  demo_detector_vs_environment_os.yaml  demo_integration_vs_far_n1.yaml  demo_integration_vs_far_n16.yaml  demo_jamming_sinr.yaml  demo_pd_mc_swerling0_both.yaml  demo_pd_mc_swerling0_cut.yaml  demo_pd_mc_swerling1_both.yaml  demo_pd_mc_swerling1_cut.yaml  demo_pd_mc_swerling2_both.yaml  demo_pd_mc_swerling2_cut.yaml  demo_pd_mc_swerling3_both.yaml  demo_pd_mc_swerling3_cut.yaml  demo_pd_mc_swerling4_both.yaml  demo_pd_mc_swerling4_cut.yaml  demo_pd_model_vs_mc_swerling0.yaml  demo_pd_model_vs_mc_swerling1.yaml  demo_pd_model_vs_mc_swerling2.yaml  demo_pd_model_vs_mc_swerling3.yaml  (+8 more)
notebook/: radar_pipeline_walkthrough.ipynb
reports/: case_generators.py  generators.py  html_case_report.py  make_case_report.py  plots.py
sweeps/: doe.py  grid.py  pareto.py  sensitivity.py
tests/: test_counts.py  test_energy.py  test_metric_queries.py  test_monotonicity.py  test_physical_monotonicity.py  test_units.py
validation/: sanity_checks.py
(+58 files in other folders)
